Add BP on chain

--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -1,3 +1,25 @@
+@incollection{rumelhart1986learning,
+  title={Learning internal representations by error-propagation},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  booktitle={Parallel Distributed Processing: Explorations in the Microstructure of Cognition. Volume 1},
+  volume={1},
+  number={6088},
+  pages={318--362},
+  year={1986},
+  publisher={MIT Press, Cambridge, MA}
+}
+
+@article{lecun1989backpropagation,
+  title={Backpropagation applied to handwritten zip code recognition},
+  author={LeCun, Yann and Boser, Bernhard and Denker, John S and Henderson, Donnie and Howard, Richard E and Hubbard, Wayne and Jackel, Lawrence D},
+  journal={Neural computation},
+  volume={1},
+  number={4},
+  pages={541--551},
+  year={1989},
+  publisher={MIT Press}
+}
+
 @inproceedings{krizhevsky2012imagenet,
   title={Imagenet classification with deep convolutional neural networks},
   author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
