Outline for human identification

--- a/mainmatter/human_identification.tex
+++ b/mainmatter/human_identification.tex
@@ -1,2 +1,25 @@
 \chapter{Human Identification Background}
 \label{ch:human-identification-background}
+
+% Problem settings
+%   Face only / Photo albums / Surveillance
+%   Verification
+%   Evaluation metrics
+%   Towards real applications
+
+% Technical Roadmap
+%   Retrieval (how to extract discriminative features from single image)
+%   Feature matching (how to match features of a pair of images)
+%   Ranking (how to rank among a gallery of images, structure of the gallery feature space)
+
+This chapter introduces the background of human identification. Because of its rich values in real applications, human identification receives much research attentions in computer vision, which leads to various subtopics. In Section~\ref{sec:human-id-prob-settings}, we introduce different problem settings and evaluation metrics for human identification, as well as current research trend towards more realistic application scenarios. In Section~\ref{sec:human-id-tech-roadmap}, we develop a technical roadmap for human identification, and review some related work along this roadmap.
+
+\section{Problem Settings} % (fold)
+\label{sec:human-id-prob-settings}
+
+% section human-id-prob-settings (end)
+
+\section{Technical Roadmap} % (fold)
+\label{sec:human-id-tech-roadmap}
+
+% section human-id-tech-roadmap (end)
