--- a/mainmatter/introduction.tex
+++ b/mainmatter/introduction.tex
@@ -5,7 +5,7 @@
 Imagine that in the near future, people are able to travel with self-driving cars, which recognize who you are, automatically navigating to your destination, and pay attention to other cars and pedestrians along the way. Vision, as the most important perception for both human beings and artificial intelligence, is the key to interpret the surrounding environment and help finish all these tasks correctly.
 
 % Applications
-Among the broad spectrum of topics, human identification, which aims at finding a person of interest from a gallery of digital photos or videos, is one of the most fundamental problems in computer vision. Human identification is closely related to real applications, for example, it enables smart phones to group together photos that belong to the same person, it helps home security systems recognize housebreakers, and it also assists police to locate and track criminals from massive surveillance videos.
+Among the broad spectrum of topics, \emph{human identification}, which aims at finding a person of interest from a gallery of digital photos or videos, is one of the most fundamental problems in computer vision. Human identification is closely related to real applications, for example, it enables smart phones to group together photos that belong to the same person, it helps home security systems recognize housebreakers, and it also assists police to locate and track criminals from massive surveillance videos.
 
 % Challenges
 Given a pair of person photos, although human can easily tell whether they are of the same identity or not, this task is extremely difficult to computers. Human can instantly figure out high-level attributes, such as gender and age, and then gradually compare their finer details, for example, the clothes colors, materials, styles, and the accessories. However, what computers percept from a digital photo is just an array of integers representing the color illumination at each pixel. Computers need to extract patterns from these numbers and understand their high-level semantic meanings, which are also called \emph{features} or \emph{feature representations} in computer vision. The challenge here is to define which features are useful for human identification, and what are their unique patterns.
