Problem settings for human identification

--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -20,20 +20,6 @@
   publisher={MIT Press}
 }
 
-@inproceedings{krizhevsky2012imagenet,
-  title={Imagenet classification with deep convolutional neural networks},
-  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
-  booktitle={NIPS},
-  year={2012}
-}
-
-@article{donahue2013decaf,
-  title={Decaf: A deep convolutional activation feature for generic visual recognition},
-  author={Donahue, Jeff and Jia, Yangqing and Vinyals, Oriol and Hoffman, Judy and Zhang, Ning and Tzeng, Eric and Darrell, Trevor},
-  journal={arXiv:1310.1531},
-  year={2013}
-}
-
 @inproceedings{jia2014caffe,
   title={Caffe: Convolutional architecture for fast feature embedding},
   author={Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
@@ -417,13 +403,6 @@
   year={2007}
 }
 
-@inproceedings{sun2014deep,
-  title={Deep learning face representation from predicting 10,000 classes},
-  author={Sun, Yi and Wang, Xiaogang and Tang, Xiaoou},
-  booktitle={CVPR},
-  year={2014}
-}
-
 @article{ioffe2015batch,
   title={Batch normalization: Accelerating deep network training by reducing internal covariate shift},
   author={Ioffe, Sergey and Szegedy, Christian},
@@ -607,10 +586,10 @@ doi = {10.1007/s11263-015-0816-y}
   year={2013}
 }
 
-@article{zheng2015person,
-  title={Person Re-identification Meets Image Search},
-  author={Zheng, Liang and Shen, Liyue and Tian, Lu and Wang, Shengjin and Bu, Jiahao and Tian, Qi},
-  journal={arXiv preprint arXiv:1502.02171},
+@inproceedings{zheng2015scalable,
+  title={Scalable Person Re-identification: A Benchmark},
+  author={Zheng, Liang and Shen, Liyue and Tian, Lu and Wang, Shengjin and Wang, Jingdong and Tian, Qi},
+  booktitle={ICCV},
   year={2015}
 }
 
@@ -729,15 +708,15 @@ doi = {10.1007/s11263-015-0816-y}
 @inproceedings{chu2016structured,
   title={Structured Feature Learning for Pose Estimation},
   author={Chu, Xiao and Ouyang, Wanli and Li, Hongsheng and Wang, Xiaogang},
-  journal={CVPR},
+  booktitle={CVPR},
   year={2016}
 }
 
-@article{zheng2016person,
+@inproceedings{zheng2017person,
   title={Person Re-identification in the Wild},
-  author={Zheng, Liang and Zhang, Hengheng and Sun, Shaoyan and Chandraker, Manmohan and Tian, Qi},
-  journal={arXiv preprint arXiv:1604.02531},
-  year={2016}
+  author={Zheng, Liang and Zhang, Hengheng and Sun, Shaoyan and Chandraker, Manmohan and Yang, Yi and Tian, Qi},
+  booktitle={CVPR},
+  year={2017}
 }
 
 @inproceedings{zajdel2005keeping,
@@ -1090,7 +1069,7 @@ doi = {10.1007/s11263-015-0816-y}
   year={2014}
 }
 
-@inproceedings{sun2014deep,
+@inproceedings{sun2014deep1,
   title={Deep learning face representation from predicting 10,000 classes},
   author={Sun, Yi and Wang, Xiaogang and Tang, Xiaoou},
   booktitle={CVPR},
@@ -1111,7 +1090,7 @@ doi = {10.1007/s11263-015-0816-y}
   year={2015}
 }
 
-@inproceedings{sun2014deep,
+@inproceedings{sun2014deep2,
   title={Deep learning face representation by joint identification-verification},
   author={Sun, Yi and Chen, Yuheng and Wang, Xiaogang and Tang, Xiaoou},
   booktitle={NIPS},
@@ -1221,4 +1200,53 @@ doi = {10.1007/s11263-015-0816-y}
   author={Wang, Limin and Xiong, Yuanjun and Wang, Zhe and Qiao, Yu and Lin, Dahua and Tang, Xiaoou and Van Gool, Luc},
   booktitle={ECCV},
   year={2016}
+}
+
+@inproceedings{zhang2015beyond,
+  title={Beyond frontal faces: Improving person recognition using multiple cues},
+  author={Zhang, Ning and Paluri, Manohar and Taigman, Yaniv and Fergus, Rob and Bourdev, Lubomir},
+  booktitle={CVPR},
+  year={2015}
+}
+
+@inproceedings{taigman2014deepface,
+  title={DeepFace: Closing the Gap to Human-Level Performance in Face Verification},
+  author={Taigman, Yaniv and Yang, Ming and Ranzato, Marc'Aurelio and Wolf, Lior},
+  booktitle={CVPR},
+  year={2014}
+}
+
+@inproceedings{parkhi2015deep,
+  title={Deep Face Recognition},
+  author={Parkhi, Omkar M and Vedaldi, Andrea and Zisserman, Andrew},
+  booktitle={BMVC},
+  year={2015}
+}
+
+@inproceedings{zajdel2005keeping,
+  title={Keeping track of humans: Have I seen this person before?},
+  author={Zajdel, Wojciech and Zivkovic, Zoran and Krose, BJA},
+  booktitle={ICRA},
+  year={2005}
+}
+
+@inproceedings{zheng2016mars,
+  title={Mars: A video benchmark for large-scale person re-identification},
+  author={Zheng, Liang and Bie, Zhi and Sun, Yifan and Wang, Jingdong and Su, Chi and Wang, Shengjin and Tian, Qi},
+  booktitle={European Conference on Computer Vision},
+  year={2016}
+}
+
+@inproceedings{xiaoli2017joint,
+  title={Joint Detection and Identification Feature Learning for Person Search},
+  author={Xiao, Tong and Li, Shuang and Wang, Bochao and Lin, Liang and Wang, Xiaogang},
+  booktitle={CVPR},
+  year={2017}
+}
+
+@inproceedings{li2017person,
+  title={Person search with natural language description},
+  author={Li, Shuang and Xiao, Tong and Li, Hongsheng and Zhou, Bolei and Yue, Dayu and Wang, Xiaogang},
+  booktitle={CVPR},
+  year={2017}
 }
