--- a/mainmatter/multi_domain.tex
+++ b/mainmatter/multi_domain.tex
@@ -38,7 +38,7 @@ As deep neural networks usually contain millions of parameters, it is of great i
 
 While the standard Dropout algorithm treats all the neurons equally with a fixed probability, Ba~\etal~\cite{ba2013adaptive} proposed an adaptive dropout scheme by learning a binary belief network to predict the dropout probability for each neuron. In practice, they use the response of each neuron to compute the dropout probability for itself. Our approach significantly differs from this method, as we propose to train a CNN from multiple domains, and utilize the domain information to guide the dropout procedure.
 
-We target the person re-identification (Re-ID) problem in this work, which is very challenging and draws much attention in recent years~\cite{wang2007shape,li2015locality,zhang2015bit,xu2013human,liu2014fly,li2015multi}. Existing Re-ID methods mainly address the problem from two aspects: finding more powerful feature representations and learning better metrics. Zhao~\etal~\cite{zhao2013unsupervised,zhao2013person,zhao2014learning} proposed to combine SIFT features with color histogram as features. In deep learning literature, Li~\etal~\cite{li2014deepreid} and Ahmed~\etal~\cite{ahmed2015improved} designed CNN models specifically to the Re-ID task and achieved good performance on large-scale datasets. They trained the network with pairs of pedestrian images and adopted the verification loss function. Ding~\etal~\cite{ding2015deep} utilized triplet samples for training features that maximize relative distance between the pair of same person and the pair of different people in the triplets. Apart from the feature learning methods, a large number of metric learning algorithms~\cite{paisitkriangkrai2015learning,weinberger2005distance,xiong2014person,davis2007information,mcfee2010metric,koestinger2012large} have also been proposed to solve the Re-ID problem from a complementary perspective. Some recent works addressed the problem of mismatch between traditional Re-ID and real application scenarios. Liao~\etal~\cite{liao2014open} proposed a database for open-set Re-ID. Zheng~\etal~\cite{zheng2015person} treated Re-ID as an image search problem and introduced a large-scale dataset. Xu~\etal~\cite{xu2014person} raised the problem of searching a person inside whole images rather than cropped bounding boxes.
+We target the person re-identification (Re-ID) problem in this work, which is very challenging and draws much attention in recent years~\cite{wang2007shape,li2015locality,zhang2015bit,xu2013human,liu2014fly,li2015multi}. Existing Re-ID methods mainly address the problem from two aspects: finding more powerful feature representations and learning better metrics. Zhao~\etal~\cite{zhao2013unsupervised,zhao2013person,zhao2014learning} proposed to combine SIFT features with color histogram as features. In deep learning literature, Li~\etal~\cite{li2014deepreid} and Ahmed~\etal~\cite{ahmed2015improved} designed CNN models specifically to the Re-ID task and achieved good performance on large-scale datasets. They trained the network with pairs of pedestrian images and adopted the verification loss function. Ding~\etal~\cite{ding2015deep} utilized triplet samples for training features that maximize relative distance between the pair of same person and the pair of different people in the triplets. Apart from the feature learning methods, a large number of metric learning algorithms~\cite{paisitkriangkrai2015learning,weinberger2005distance,xiong2014person,davis2007information,mcfee2010metric,koestinger2012large} have also been proposed to solve the Re-ID problem from a complementary perspective. Some recent works addressed the problem of mismatch between traditional Re-ID and real application scenarios. Liao~\etal~\cite{liao2014open} proposed a database for open-set Re-ID. Zheng~\etal~\cite{zheng2015scalable} treated Re-ID as an image search problem and introduced a large-scale dataset. Xu~\etal~\cite{xu2014person} raised the problem of searching a person inside whole images rather than cropped bounding boxes.
 
 % section related_work (end)
 
