--- a/mainmatter/human_identification.tex
+++ b/mainmatter/human_identification.tex
@@ -59,5 +59,7 @@ Apart from the classical settings introduced above, researchers have recently ex
 
 \section{Technical Roadmap} % (fold)
 \label{sec:human-id-tech-roadmap}
+After introducing the problem settings for human identification, this section develops a technical roadmap for solving the problem, which reviews some existing approaches and enlightens future research.
 
+Human identification should be addressed from three levels. First, the fundamental question is how to learn discriminative feature representations for a person image.
 % section human-id-tech-roadmap (end)
