Human id feature learning

--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -1250,3 +1250,24 @@ doi = {10.1007/s11263-015-0816-y}
   booktitle={CVPR},
   year={2017}
 }
+
+@inproceedings{wen2016discriminative,
+  title={A discriminative feature learning approach for deep face recognition},
+  author={Wen, Yandong and Zhang, Kaipeng and Li, Zhifeng and Qiao, Yu},
+  booktitle={ECCV},
+  year={2016}
+}
+
+@inproceedings{titsias2016one,
+  title={One-vs-Each Approximation to Softmax for Scalable Estimation of Probabilities},
+  author={Titsias, Michalis K},
+  booktitle={NIPS},
+  year={2016}
+}
+
+@article{snell2017prototypical,
+  title={Prototypical Networks for Few-shot Learning},
+  author={Snell, Jake and Swersky, Kevin and Zemel, Richard S},
+  journal={arXiv preprint arXiv:1703.05175},
+  year={2017}
+}
