--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -1271,3 +1271,24 @@ doi = {10.1007/s11263-015-0816-y}
   journal={arXiv preprint arXiv:1703.05175},
   year={2017}
 }
+
+@inproceedings{zhang2016learning,
+  title={Learning a discriminative null space for person re-identification},
+  author={Zhang, Li and Xiang, Tao and Gong, Shaogang},
+  booktitle={CVPR},
+  year={2016}
+}
+
+@inproceedings{weinzaepfel2013deepflow,
+  title={Deepflow: Large displacement optical flow with deep matching},
+  author={Weinzaepfel, Philippe and Revaud, Jerome and Harchaoui, Zaid and Schmid, Cordelia},
+  booktitle={ICCV},
+  year={2013}
+}
+
+@article{revaud2016deepmatching,
+  title={Deepmatching: Hierarchical deformable dense matching},
+  author={Revaud, Jerome and Weinzaepfel, Philippe and Harchaoui, Zaid and Schmid, Cordelia},
+  journal={IJCV},
+  year={2016}
+}
