Structure of feature set

--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -1292,3 +1292,24 @@ doi = {10.1007/s11263-015-0816-y}
   journal={IJCV},
   year={2016}
 }
+
+@article{zhong2017re,
+  title={Re-ranking Person Re-identification with k-reciprocal Encoding},
+  author={Zhong, Zhun and Zheng, Liang and Cao, Donglin and Li, Shaozi},
+  journal={CVPR},
+  year={2017}
+}
+
+@inproceedings{liu2013pop,
+  title={Pop: Person re-identification post-rank optimisation},
+  author={Liu, Chunxiao and Change Loy, Chen and Gong, Shaogang and Wang, Guijin},
+  booktitle={ICCV},
+  year={2013}
+}
+
+@article{zhao2017person,
+  title={Person re-identification by saliency learning},
+  author={Zhao, Rui and Oyang, Wanli and Wang, Xiaogang},
+  journal={TPAMI},
+  year={2017}
+}
