--- a/mainmatter/human_identification.tex
+++ b/mainmatter/human_identification.tex
@@ -81,9 +81,6 @@ Comparing a pair of deep learning feature maps is nontrivial, since the feature 
 
 \subsection{Structure of Feature Set} % (fold)
 \label{sub:structure_of_feature_set}
-
+The last question is how to rank a set of gallery images according to the query. Answering this question requires modeling the structure of the gallery feature set. For example, by observing many gallery photos one can understand what the \emph{salient} features are for distinguishing different people~\cite{zhao2013unsupervised,zhao2017person}. Several other work focused on the ranking algorithm itself. Zhong \etal~\cite{zhong2017re} proposed a re-ranking algorithm by exploiting the prior knowledge that each identity has at least two instances in gallery set. Liu \etal~\cite{liu2013pop} designed an algorithm cooperate with human labelers to refine a initial ranking result.
 % subsection structure_of_feature_set (end)
-
-
-
 % section human-id-tech-roadmap (end)
